--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,19 +64,18 @@
     width: 100vw;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 0;
-    background: lightgray;
+    background: white;
     border-bottom: 2px solid teal;
     border-top: 2px solid teal;
-
 }
 
 .navbar__container {
-    max-width: 80vw;
+    width: 80vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .navbar__links {
