--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,12 @@
 }
 
 .App {
-    max-width: 80vw;
+    max-width: 800px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
 }
 
 .post {
